# qwen3-asr-rs

./: .gitignore  Cargo.toml  HANDOFF.md  README.md  ROADMAP.md  cubecl.toml  test_90s_err.txt  test_90s_out.txt
docs/superpowers/plans/: 2026-06-12-cpu-audio-encoder.md  2026-07-06-benchmark-rust-vs-hf-native.md
docs/superpowers/specs/: 2026-06-12-cpu-audio-encoder-design.md
examples/: cer_compare.rs  cublas_gemv_bench.rs  mem_probe.ps1  test_hallucination.rs
ptx/: MANIFEST.txt  kernels_sm61.ptx  kernels_sm70.ptx  kernels_sm75.ptx  kernels_sm80.ptx  kernels_sm86.ptx  kernels_sm89.ptx  kernels_sm90.ptx
scripts/: bench.ps1  bench_hf_native.py  bench_original.py  compile-ptx.ps1  summarize_all.py  summarize_bench.py
src/: backend.rs  config.rs  cpu_audio_encoder.rs  cpu_engine.rs  cudarc_engine.rs  decoder.rs  encoder.rs  gpu_audio_encoder.rs  hub.rs  inference.rs  lib.rs  mel.rs  mrope.rs  prebuilt_ptx.rs  prompt.rs  raw_tensor.rs  streaming.rs  weights.rs
src/kernels/: kernels.cu
tests/: bench_cuda.rs  cpu_90s.rs  cpu_transcribe.rs  transcribe.rs  transcribe_burn.rs  verify_ops.rs
