[package]
name = "qwen3-asr-burn"
version = "0.2.2"
edition = "2021"
description = "Local speech-to-text (ASR) in Rust — Burn backend (CUDA/ROCm/Metal/Vulkan/CPU)"
license = "MIT"

[dependencies]
burn = { version = "0.21", default-features = false, features = ["std"] }
burn-cubecl = { version = "0.21", optional = true }
cubecl = { version = "0.10", optional = true }
half = { version = "2", optional = true }
cudarc = { version = "0.19", features = ["cublas", "f16"], optional = true }
tokenizers = { version = "0.22", features = ["onig"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3"
rubato = "0.15"
rustfft = "6"
anyhow = "1"
log = "0.4"
safetensors = "0.4"
thiserror = "2"

reqwest = { version = "0.12", features = ["blocking"], optional = true }

[features]
default = ["cuda"]
cuda  = ["burn/cuda", "dep:burn-cubecl", "dep:cubecl", "dep:half", "dep:cudarc", "cubecl/cuda"]
rocm  = ["burn/rocm", "dep:burn-cubecl", "dep:cubecl", "dep:half", "cubecl/rocm"]
metal = ["burn/metal", "dep:burn-cubecl", "dep:cubecl", "dep:half", "cubecl/metal"]
vulkan = ["burn/wgpu", "dep:half"]
cpu   = ["burn/ndarray"]
hub = ["dep:reqwest"]

[dev-dependencies]
env_logger = "0.11"
