[package]
name = "qwen3-asr"
version = "0.2.2"
edition = "2021"
description = "Local speech-to-text (ASR) in Rust — hand-written CUDA + CPU inference engines"
license = "MIT"

[dependencies]
half = { version = "2" }
cudarc = { version = "0.19", features = ["cublas", "f16", "cuda-version-from-build-system", "cuda-12080"], optional = true }
# gemm + rayon power the CPU-only text-decoder engine (cpu_engine.rs).  We drive them
# directly so we can force Rayon parallelism on the m=1 GEMVs that typical GEMM thresholds
# leave single-threaded.
gemm = { version = "0.18", optional = true }
rayon = { version = "1.10", optional = true }
tokenizers = { version = "0.22", features = ["onig"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3"
rubato = "0.15"
rustfft = "6"
anyhow = "1"
log = "0.4"
safetensors = "0.4"
thiserror = "2"

reqwest = { version = "0.12", features = ["blocking"], optional = true }

[features]
# Default = cuda: end-to-end transcribe works out of the box on a CUDA-capable host.
# CPU path also works end-to-end (--no-default-features --features cpu).
# Both backends store weights as f16, compute as f32.
default = ["cuda"]
cuda = ["dep:cudarc"]
cpu = ["dep:gemm", "dep:rayon"]
hub = ["dep:reqwest"]

[dev-dependencies]
env_logger = "0.11"
